fixed header overflow on tutorial pages

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,3 +23,7 @@
 .txt-style{
     font-size: 18px;
 }
+
+.tutHeader {
+    overflow: hidden;
+}
